fix: liquid error 수정

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -168,6 +168,17 @@ typora-root-url: ../../..
 - [BFS, DFS -> 최단거리는 꼭 "BFS"!!](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#bfs-dfs---%EC%B5%9C%EB%8B%A8%EA%B1%B0%EB%A6%AC%EB%8A%94-%EA%BC%AD-bfs)
 - [백트래킹(Backtracking) -> DFS(재귀) 사용중](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EB%B0%B1%ED%8A%B8%EB%9E%98%ED%82%B9backtracking---dfs%EC%9E%AC%EA%B7%80-%EC%82%AC%EC%9A%A9%EC%A4%91)
 - [최단 경로 트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%B5%9C%EB%8B%A8-%EA%B2%BD%EB%A1%9C-%ED%8A%B8%EB%A6%AC)
+  - **다익스트라(아래코드기억)** : **하나의 정점**에서 다른 모든 정점으로의 최단경로 -> **우선순위 큐 + 최소거리 배열**
+  - 플로이드 : **모든 정점**에서 다른 모든 정점으로의 최단경로 -> **3중 for문 + 인접행렬**
+  - 벨만포드 : 다익스트라는 양수만, 벨만포드는 음수도 최단경로 사용 가능
+    - 근데, 벨만포드까지는 코테 잘 안나올것 같아서 나중에 시간나면 보는걸로..
+
+- MST(최소신장트리)  
+  **최단경로트리와 차이점은 "여러 정점들을 거쳐 돌아가도 되느냐 아니느냐의 차이"**  
+  MST의 경우 바로 인접 정점들중 최소 가중치를 구함
+  - **프림(아래코드기억)** -> 우선순위 큐
+  - 크루스칼 -> Union find
+
 - 나머지... 자유롭게 공부
 
 <br>
@@ -1304,14 +1315,9 @@ for(int i=1; i<=N; i++) {
 - cal 함수는 dfs가 너무 길어질거같아서 빼낸 함수일 뿐이지 dfs 내부로직으로 보면 된다.
 - 백트래킹을 "2차원 배열"인 점이 인상깊다.
 
-```java
-// dArr[p.cctv][d] -> 총 cctv5개 가지는 문제
-static int[] dArr1 = {0,1,2,3};
-static int[][] dArr2 = {{2,0},{3,1}}; // {왼,오}, {위,아}
-static int[][] dArr3 = {{3,0},{0,1},{2,1},{2,3}}; // {위,오}, {오,아}, {왼,아}, {왼,위}
-static int[][] dArr4 = {{3,0,2},{3,0,1},{0,2,1},{2,3,1}}; // {위,오,왼}, {위,오,아}, {오,왼,아}, {왼,위,아}
-static int[][] dArr5 = {{0,1,2,3}}; // {오,아,왼,위}
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/26f97427-238b-4c2d-ac05-773c84db53f5) 
 
+```java
 static void cal(Point p, int depth, int[][] backup) {
     for(int i = 0; i<4; i++) {
         // dArr1[i] 는 dir(방향)이며, calOut은 주어진 방향에 직진으로 이동하는 함수
@@ -2640,9 +2646,13 @@ public static void redfs(int depth, int SCCNum) {
 
 **크루스칼 알고리즘은 Union Find라는 알고리즘을 선행학습 하고 아래 코드를 이해할 것.**
 
+-> 예전에 정리한 개념글 위에 링크 확인
+
 ![image-20230506012547858](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506012547858.png)
 
 <br>
+
+**크루스칼**
 
 ```java
 // BOJ 1197
@@ -2722,7 +2732,9 @@ static class ObjectSort implements Comparator<Edge> {
 
 <br>
 
-**프림 알고리즘은 우선순위 큐를 이용해서 구현을 하는데, 구현이 좀 복잡하다. 따라서 pass**
+**프림 알고리즘은 우선순위 큐를 이용해서 구현을 하는데, 구현이 좀 복잡하다.**
+
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/19663aca-66ae-4c98-9499-c93e6ebd47ee) 
 
 <br><br>
 
