--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -70,6 +70,12 @@ typora-root-url: ../../..
   - **"완.탐"에 DFS(재귀+백트래킹)**이나 **"최단거리"면 BFS(+DP)** 로 풀어나가는 편인데,
   - 추가 조건없이 "for문이나 재귀"로 풀릴만한 복잡도면 **꼭 복잡하게 풀지말고 시도!!**
   - 백트래킹은 따로 BFS에서 구현 안해봤기에 DFS(재귀)로 꼭 구현하자
+  - **(중요) "완.탐" 순,조,부 로 생각하면 됨!! 복잡도도 순조부 복잡도 고려**
+    - 순열은 n의 수가 10보다 클 경우 순열 문제가 아닐 가능성이 높음
+      - 순열의 시간복잡도 n!
+    - 조합은 n=30, r=15일 경우 약 1억 5천 → <sub>30</sub>C<sub>15</sub> = 155117520
+    - 부분 집합은 n이 30일 경우
+      - 2^20은 약 100만, 2^30은 약 10억
 - 복잡도?? 너무 크거나 나머지 상황은 DP, 그리디 등으로 접근
   - **DP 여러가지 유형** 미리 익숙해두자
 - 아래 **자료구조** 정도는 기억해두고 필요한지 판단해서 사용하자
@@ -92,6 +98,10 @@ typora-root-url: ../../..
 * EX1) 2차원 **배열 회전 로직**은 `B[x][y]=A[N-1-y][x]`
   * 단 x,y가 0부터 시작 -> N-1, M-1은 끝자리 의미
   * 실제로 예시 좌표 그려보면서 구하면 공식을 금방 도출할 수 있다.
+  * **추가1) 배열돌리기1** 같은 회전 로직은 `rotate(x, y, N, M)` 
+    * 해당 함수로 회전로직을 구현해놓고 **여러 시작점(x,y), 끝점(N,M)** 을 줘서 구동!
+  * **추가2) 2차원 "달팽이"**처럼 빙글빙글 돌때 **"범위체크+visited"**로 간단히 구현 가능하다.
+    * **좌표 원복**하고 방향 전환하는 형식이 될 것이다.
 * EX2) **투포인터**의 개념을 잘 생각 -> 두개의 배열을 인덱스 따로 하여 따로 동작하고 싶을때도 있기에 이 개념을 기억해두자
 * EX3) **배열의 인덱스를 실제 숫자**로 치환하여 생각하는 방식 -> 숫자 빈도수 구하거나 등등...
 * EX4) **dx, dy**로 1칸씩 같던 것을 **끝까지 이동(while)**하는것 -> dx, dy를 좌표에 더할수록 해당 방향으로 계속 이동 가능하단 점을 알아두자
@@ -100,8 +110,7 @@ typora-root-url: ../../..
   * 이후에 backtracking 에 사용할 수도 있으니 이런 복제도 잘 고려
 * EX6) 2차원 좌표 **구간합** 방식 -> `sum[i-1][j] ` 와 `가로방향(->) 누적값` 과 `inArr[i][j] 현재값`
   * 즉, `sum[i][j] = sum[i-1][j](바로위) + 해당 i행의 가로방향(->) 누적값 + inArr[i][j]`
-* EX7) 2차원 "**달팽이**"처럼 빙글빙글 돌때 **"범위체크+visited"**로 간단히 구현 가능하다.
-  * **좌표 원복**하고 방향 전환하는 형식이 될 것이다.
+* EX7) **반시계는 시계방향 3번**과 동일하다 -> **단, 90도일때!!** 90도 아니면 해당아님!!
 
 - EX8) "정렬 암기" -> `Long.compare(a.x, b.x) 는 a.x < b.x ? -1 : (a.x==b.x?0:1) 와 동일`
 
@@ -1773,7 +1782,7 @@ while(num != 0) {
 
 <br><br>
 
-## 이분탐색
+## 이분탐색(binarySearch)
 
 **정렬되어 있는 배열에서 특정 데이터를 찾기 위해 모든 데이터를 탐색 범위를 절반으로 줄여가며 찾는 탐색 방법**
 
@@ -1819,6 +1828,36 @@ for(int i = 0 ; i<M;i++){
 }
 System.out.println(sb);
 ```
+
+<br>
+
+**binarySearch 좀 더 자세한 실습 -> 못 찾았을때 음수값의 자세한 의미 설명**
+
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/85278ead-1a02-447a-92d1-6948fc7b7fe5) 
+
+<br>
+
+**range(범위) 를 준 방법** -> 예로 1, 3, 1 은 인덱스 1~3 범위에서 1값 있나 찾고 없어서 -2 위치가 반환
+
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/2740d60d-5e70-4f6c-b461-c8a38702e1e1)  
+
+<br>
+
+**직접 객체에 적용해보기 + 정렬까지 -> y만 고려했을 때**
+
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/107ddc13-5d95-4371-9b8b-5db7a179b444) 
+
+
+
+**직접 객체에 적용해보기 + 정렬까지 -> y,x 둘다 고려했을 때**
+
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/f54cc639-8080-4399-8a30-2bc86c474fcb) 
+
+
+
+**정렬만 람다로 했을때**
+
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/37e4c5b2-869f-4c65-a59a-02c4be7a4326) 
 
 <br>
 
@@ -2259,6 +2298,7 @@ static void dfs(int depth, List<Integer> val) {
 * **여러가지 트리 - Segment**
 * 참고로 **BST, RBT**는 위에서 이미 정리 그리고 **우선순위 큐에 사용한 힙**도 이진트리임
   * **좀 더 다양한 트리(Splay, OST, Range, Interval)는  [고급트리 개념](https://bh946.github.io/algorithm/(%EA%B3%A0%EA%B8%89%EA%B0%9C%EB%85%90)-%EA%B3%A0%EA%B8%89-%ED%8A%B8%EB%A6%AC(BST,-RBT,-Splay,-OST,-Range,-Interval,-Sgement)/) 에서 참고** 
+  * **힙 위 아래관계, 이진탐색트리 좌우 관계로 기억**
 
 <br>
 
@@ -2357,6 +2397,101 @@ public Boolean isZeroTree(String binary) {
     else { // 루트 노드가 0이라면 서브트리 계속 확인
         return isZeroTree(left) && isZeroTree(right);    
     }
+}
+```
+
+<br>
+
+**사칙연산 유효성 검사_1233 SWEA**
+
+- 입력은 1번 노드부터 N번 노드까지 이진트리 형태로 주어짐
+
+```java
+// 반복문 ver -> 꼭 재귀가 아니어도 이렇게 풀이가 된다는것
+static int N, ans;
+static char[] node;
+static StringBuilder sb = new StringBuilder();
+
+public static void main(String[] args) throws Exception {
+    StringBuilder sb = new StringBuilder();
+    BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+    for(int t=1; t<=10; t++) {
+        N = Integer.parseInt(br.readLine());
+        node = new char[N+1];
+
+        for(int i=1; i<=N; i++) { // 두번째 입력항목만
+            node[i] = br.readLine().split(" ")[1].charAt(0);
+        }
+
+        if( N%2 == 0) { // 자식 노드가 1개인 경우 바로 0 처리
+            sb.append("#").append(t).append(" ").append(0).append('\n');
+            continue;
+        }
+
+        ans=1;
+        int idx = N; // 마지막 노드부터 유효성 검사
+
+        while( idx != 1 ) {
+            // 자식 노드가 모두 숫자이고, 부모노드가 연산자이어야 함.
+            if ( ! Character.isDigit(node[idx])
+                || ! Character.isDigit(node[idx-1])
+                || Character.isDigit(node[idx/2])) {
+                ans = 0;
+                break;
+            }
+            node[idx/2] = '1'; // 부모 노드를 숫자로
+            idx -= 2;
+        }
+        sb.append("#").append(t).append(" ").append(ans).append('\n');
+    }
+    System.out.println(sb);
+}
+```
+
+```java
+// 재귀 ver
+static int N, ans;
+static char[] node;
+static StringBuilder sb = new StringBuilder();
+
+public static void main(String[] args) throws Exception {
+    StringBuilder sb = new StringBuilder();
+    BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+    for(int t=1; t<=10; t++) {
+        N = Integer.parseInt(br.readLine());
+        node = new char[N+1];
+
+        for(int i=1; i<=N; i++) { // 두번째 입력항목만
+            node[i] = br.readLine().split(" ")[1].charAt(0);
+        }
+
+        if( N%2 == 0) { // 자식 노드가 1개인 경우 바로 0 처리
+            sb.append("#").append(t).append(" ").append(0).append('\n');
+            continue;
+        }
+
+        // 재귀호출
+        ans = dfs(1) ? 1 : 0; // root 부터 재귀호출 시작
+        sb.append("#").append(t).append(" ").append(ans).append('\n');
+    }
+    System.out.println(sb);
+
+}
+
+// x 위치의 노드가 유효한지 return
+static boolean dfs(int x) {
+    // 기저 조건
+    if( x > N ) return false;
+
+    if( Character.isDigit(node[x])) { // => 숫자 노드 이면 자식이 없어야 한다.
+        if( x*2 > N ) return true;
+        return false;
+    }else { // 연산자 노드
+        // 두 자식 노드의 유효성에 의존
+        // 두 자식 노드가 모두 유효해야 true
+        return dfs(x*2) && dfs(x*2+1);
+    }
+
 }
 ```
 
