--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -105,6 +105,10 @@ typora-root-url: ../../..
 * EX2) **투포인터**의 개념을 잘 생각 -> 두개의 배열을 인덱스 따로 하여 따로 동작하고 싶을때도 있기에 이 개념을 기억해두자
 * EX3) **배열의 인덱스를 실제 숫자**로 치환하여 생각하는 방식 -> 숫자 빈도수 구하거나 등등...
 * EX4) **dx, dy**로 1칸씩 같던 것을 **끝까지 이동(while)**하는것 -> dx, dy를 좌표에 더할수록 해당 방향으로 계속 이동 가능하단 점을 알아두자
+  * **추가1) 2048 or 모노미노도미노2** 처럼 **끝까지 이동(while) + 범위 넘으면 원복(--)** 방식 괜찮음
+  * 이것을 "하나의 함수" 로 구성하여 "각각의 좌표나 행,열"로 각각 재사용하는것이 편함
+  * "오른쪽 방향일때 오른쪽부터 접근해야하는가" 이런것도 꼭 고려!
+
 * EX5) 보통 "시뮬레이션"은 복잡도가 높지않아 **배열 상태 매번 새로 복제** 잘 고려 -> 한번씩 이런 사소한 할당에서 문제가 발생
   * `int[][] backup = new int[10][10];`
   * 이후에 backtracking 에 사용할 수도 있으니 이런 복제도 잘 고려
