--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -451,15 +451,27 @@ Intro에서도 언급했지만, 본인의 경우 **완.탐 복잡도**라면 **"
 
 <br>
 
+하나의 문제를 풀때 무조건 한가지 방식인게 아니다. 예로 "햄버거 다이어트" 라는 SWEA 문제를 보면,
+
+"조합" 으로 해결 -> 무게를 기저조건으로
+
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/0127af0b-8126-4a09-846f-099d15aafac4) 
+
+<br>
+
+"부분집합" 으로 해결 -> N(재료개수)를 기저조건으로
+
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/162a4dcd-dde1-42a6-ab83-5f01be34f47f) 
+
+<br>
+
+심지어 냅색 유형의 **DP**로도 충분히 풀이가 될 수 있다.
+
+<br><br>
+
 ### 비트연산
 
 참고 정도로 알아두자.
-
-아래 정리할차례. 비트마스크뭐시기..NP뭐시키바이너리카우티
-
-그거하고나면 BFS,DFS 요두개 다시보면서 글정리하고 -> 게시물링크 쭉 달아주고 -> 전체 쭉둘러보고 마무리.
-
-
 
 기본 비트연산 방법은 구글에 검색해서 확인.
 
@@ -480,7 +492,7 @@ Intro에서도 언급했지만, 본인의 경우 **완.탐 복잡도**라면 **"
 
 **바이너리 카운팅(Binary Counting)**
 
-**2진수로 경우의수를 표현 가능**
+**2진수로 경우의수를 표현 가능** -> bit의 표현이 원소의 선택/비선택 표현
 
 - 예로 {1, 3, 5, 6, 9} 가 있을때 이것의 모든 **부분집합**을 2진수로 표현이 가능
 
@@ -515,11 +527,32 @@ Intro에서도 언급했지만, 본인의 경우 **완.탐 복잡도**라면 **"
 **구현 로직**
 
 - 배열을 오름차순 정렬한 후 시작 -> 가장 작은 순열 한번 처리!
+
 - 아래 과정을 반복하여 사전 순으로 다음으로 큰 순열 생성(가장 큰 내림차순 순열을 만들 때까지 반복한다.)
+
   1. 뒤쪽부터 탐색하며 교환위치(i-1) 찾기 (i:꼭대기)
+
   2. 뒤쪽부터 탐색하며 교환위치(i-1) 와 교환할 큰 값 위치(j) 찾기
+
   3. 두 위치 값(i-1, j) 교환
+
   4. 꼭대기위치(i) 부터 맨 뒤까지 오름차순 정렬
+
+     <img src="https://github.com/BH946/bh946.github.io/assets/80165014/4a3337e5-5873-463a-ad64-a332ad8afbb4" alt="image" style="zoom:25%;" /> **오른차순 방식을 나타내는 그림**
+
+<br>
+
+**일반적인 NP 코드**
+
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/d5570b9d-ae73-4747-bbd8-e99dcd570e40) 
+
+<br>
+
+**예시) 조합 - NP활용**
+
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/9abdd16d-c1d5-490f-bce9-0102a69c2c45) 
+
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/bfb47267-13cd-4bed-8229-31d9ce070337)  
 
 <br><br>
 
