test: bug fix text

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -480,11 +480,11 @@ Intro에서도 언급했지만, 본인의 경우 **완.탐 복잡도**라면 **"
 - `2 << 3` 이면 2*2^3
 - `2 >> 3` 이면 2/2^3
 
-& : 특정 자리가 0인지 1인지 확인하고 싶을 때 사용
+`&` : 특정 자리가 0인지 1인지 확인하고 싶을 때 사용
 
-| : 특정 자리를 1로 변경
+`|` : 특정 자리를 1로 변경
 
-<< : 자리(크기) 역할
+`<<` : 자리(크기) 역할
 
 **바이너리 카운팅(Binary Counting), 비트 마스킹(bit mask), 다음순열(Next Permutation)** 소개
 
