--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -18,7 +18,7 @@ typora-root-url: ../../..
 
 **물론 약간의 알고리즘 해석만을 동반하며, 자세한 해석은 아래 링크를 달아두겠다.**
 
-* **참고 링크 : 구글링 등등**
+* **참고 링크 : 구글링 등등1**
 
 <br>
 
