fix 포스팅 숨기기

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-01-(백준_필수1)알고리즘 문제풀기 전 필독!! - cpp.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-01-(백준_필수1)알고리즘 문제풀기 전 필독!! - cpp.md
@@ -1,5 +1,5 @@
 ---
-title:  "[백준_필수1]알고리즘 문제풀기 전 필독!!"
+title:  "[백준_필수1]알고리즘 문제풀기 전 필독!! - c++"
 categories : [Baekjoon]
 tag : [백준, 프로그래머스, 알고리즘 문제풀이]
 toc: trues
