--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp.md
@@ -16,6 +16,14 @@ typora-root-url: ../../..
 
 # Intro..
 
+**참고**
+
+- 현재 Java로 알고리즘을 풀고 있어서 "[알고리즘 템플릿 - JAVA](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/)" 가 훨씬 잘 정리되어있다.
+
+- 아래는 C++ 기준으로 작성되었으며 옛날에 작성했다보니 내용이 많이 부실하다.
+
+<br>
+
 **사용할 알고리즘들의 템플릿들을 정리하겠다.**
 
 **물론 약간의 알고리즘 해석만을 동반하며, 자세한 해석은 아래 링크를 달아두겠다.**
