--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-20-(백준_바킹독)1~11강 필수 문제모음.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-20-(백준_바킹독)1~11강 필수 문제모음.md
@@ -68,8 +68,8 @@ typora-root-url: ../../..
 * **시뮬레이션**
   * [감시](https://www.acmicpc.net/problem/15683)
   * [스티커 붙이기](https://www.acmicpc.net/problem/18808)
-  * [2048 (Easy)](https://www.acmicpc.net/problem/12100) 
-    * 안푸러!!
+  * **[2048 (Easy)](https://www.acmicpc.net/problem/12100)** 
+    * 구현... 너무 어려워
   * [치킨 배달](https://www.acmicpc.net/problem/15686)
 * **정렬 I**
   * pass
@@ -88,7 +88,7 @@ typora-root-url: ../../..
 * **그리디** 
   * [동전 0](https://www.acmicpc.net/problem/11047)
   * [회의실배정](https://www.acmicpc.net/problem/1931)
-    * 안푸렁.. DP도써야해..
+    * 안푸러.. DP도써야해..
   * [로프](https://www.acmicpc.net/problem/2217)
   * [보물](https://www.acmicpc.net/problem/1026)
   * **잘못된 그리디(그리디 문제 아닌것)**
