--- a/_posts/Coding_Test/Baekjoon_Test/2023-01-28-(백준)코테 준비 시작(Intro).md
+++ b/_posts/Coding_Test/Baekjoon_Test/2023-01-28-(백준)코테 준비 시작(Intro).md
@@ -15,10 +15,26 @@ typora-root-url: ../../..
 ## Intro..
 
 코테를 준비하기 위해서 백준 문제를 풀기 시작!!  
-예전에 `helloworld` 출력하는 수준 정도인 간단한 문제 한 두개를 풀어본 경험 외에는 백준 문제를  
+예전에 `hello, world` 출력하는 수준 정도인 간단한 문제 한 두개를 풀어본 경험 외에는 백준 문제를  
 손대지 않았었는데, 이제 꾸준히 풀기로 시작!!
 
 여러 유튜브나 정보들을 토대로 어떤 방식으로 문제를 풀어나갈지를 생각해보았다.
+
+<br>
+
+**참고**
+
+- 이 글은 옛날에 작성했던 글인데 아래내용은 좀 **옛날 방식**인것 같다.
+- 지금은 좋은 알고리즘 강의가 많기 때문에 필자는 처음이면 꼭 **"강의듣기"**를 추천한다.
+  - 예를들어 **완전탐색을 풀때 조합적 문제**가 많다라는 정보라던지 -> 이를 "순열,조합,부분집합" 으로 푸는형태가 대부분이라던지 등등
+  - 이런것은 혼자 알아내기는 너무 힘들다고 생각을 한다.
+- 그리고 문제를 무엇을 풀지 다시 생각해보자면,
+  - 자료구조, 알고리즘 관련해서 풀 때
+    - 아래에서 소개한 **백준 사이트의 강의**에 들어가서 문제들을 풀던지, [바킹독님 1~11강 필수문제](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%EB%B0%94%ED%82%B9%EB%8F%85)1~11%EA%B0%95-%ED%95%84%EC%88%98-%EB%AC%B8%EC%A0%9C%EB%AA%A8%EC%9D%8C/), [12~25강](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%EB%B0%94%ED%82%B9%EB%8F%85)12~25%EA%B0%95-%ED%95%84%EC%88%98-%EB%AC%B8%EC%A0%9C%EB%AA%A8%EC%9D%8C/) 추천한다.
+    - 특히, [백준 문제집](https://www.acmicpc.net/workbook/top) 여기에 문제집 다양하게 있어서 골라 풀어도 된다.
+  - 구현(시뮬레이션) 풀 때
+    - 개인적으로 [삼선 SW 기출](https://www.acmicpc.net/workbook/view/1152) 문제집 추천하고, **"프로그래머스에 카카오 문제"**들을 추천한다.
+- **마지막으로 본인이 참고용으로 작성한 "[알고리즘 템플릿 - JAVA](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/)"**
 
 <br><br>
 
@@ -77,18 +93,18 @@ typora-root-url: ../../..
 
 <br>
 
-**다음으로는 위에서 설명한 `필수적인 개념학습`들을 위주로 공부하면 된다고 생각한다.**
+다음으로는 위에서 설명한 `필수적인 개념학습` 들을 위주로 공부하면 된다고 생각한다.
 
 * 이 부분에서는 자신이 부족하다고 생각하는 개념들을 위주로 보충한다고 생각하며 공부한다.
 * 백준에 문제들이 알고리즘별로도 잘 분류해두었기 때문에 관련 문제찾기는 쉬울것이다.
 
 <br>
 
-**마지막으로 예전과 달리 `코테 준비` 관련 강의도 추가되어서 그쪽 문제들도 풀어보면 도움될거라고 생각한다.**
+마지막으로 예전과 달리 `코테 준비` 관련 강의도 추가되어서 그쪽 문제들도 풀어보면 도움될거라고 생각한다.
 
-**참고로 `SQL, 기업 코테 문제` 관련 문제들은 '프로그래머스' 에서 풀자!**
+참고로 `SQL, 기업 코테 문제` 관련 문제들은 '프로그래머스' 에서 풀자! -> SQL 문제는 백준에 안보임.
 
-**추가로 "바킹독"님 블로그에 알고리즘을 정말 잘 알려주셔서 많은 도움이 되었다.**
+추가로 "바킹독"님 블로그에 알고리즘을 정말 잘 알려주셔서 많은 도움이 되었다.
 
 <br><br>
 
