--- a/_posts/Major/Algorithm_Concept/hide/2022-01-28-(C언어)가우스 조르단 소거법.md
+++ b/_posts/Major/Algorithm_Concept/hide/2022-01-28-(C언어)가우스 조르단 소거법.md
@@ -7,6 +7,8 @@ toc_sticky: true
 author_profile: false
 sidebar:
    nav: "docs"
+typora-root-url: ../../..
+published: false
 ---
 
 
@@ -238,4 +240,5 @@ int main(void) {
 
 ## 실행화면
 
-![실행화면](../../../images/2022-01-28-(C언어)가우스 조르단 소거법/Gauss_Jordan_Run.png)
+![실행화면](/images/2022-01-28-(C언어)가우스 조르단 소거법/Gauss_Jordan_Run.png) 
+
