--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -315,7 +315,7 @@ Intro에서도 언급했지만, 본인의 경우 **완.탐 복잡도**라면 **"
 
 - 예시 문제
 
-  - 순열 : [N과 M (1)](https://www.acmicpc.net/problem/15649)
+  - 순열 : [N과 M (1)](https://www.acmicpc.net/problem/15649), [SWEA_6808. 규영이와 인영이의 카드게임](https://swexpertacademy.com/main/code/problem/problemDetail.do?contestProbId=AWgv9va6HnkDFAW0)
   - 중복순열 : [주사위 윷놀이](https://www.acmicpc.net/problem/17825)
 
 - **예시 코드** -> 반복문은 **노션**에서 참고
@@ -346,11 +346,40 @@ Intro에서도 언급했지만, 본인의 경우 **완.탐 복잡도**라면 **"
     }
     ```
 
+  - ```java
+    // i와 depth 구분 -> 무엇이 고정이고, 무엇이 가변인지(순열)
+    // 참고 : inArr(규영) "고정", inArr2(인영) "순열"
+    public static int[] inArr = new int[9]; // 규영
+    public static int[] inArr2 = new int[9]; // 인영
+    public static boolean[] visited = new boolean[9];
+    public static int win, lose;
+    
+    public static void dfs(int depth, int gu, int in) {
+        //base condition
+        if(depth == 9) {
+            if(gu > in) win++;
+            if(in > gu) lose++;
+            return;
+        }
+        //recursion
+        for(int i=0; i<9; i++) {
+            if(visited[i]) continue;
+            visited[i] = true;
+            if(inArr[depth] < inArr2[i]) { // depth, i 확실하게 이해할 것!
+                dfs(depth+1, gu, in+inArr[depth]+inArr2[i]);
+            } else {
+                dfs(depth+1, gu+inArr[depth]+inArr2[i], in);
+            }
+            visited[i] = false;
+        }
+    }
+    ```
+
 - **예시 트리**
 
   - **순열** -> "순서(자리)"
     - <img src="https://github.com/BH946/bh946.github.io/assets/80165014/40d694ab-6da7-4f65-a762-0a57f1751739" alt="image" style="zoom:33%;" /> 
-  
+
   * **중복순열** -> "순서 + 중복까지"
     - <img src="https://github.com/BH946/bh946.github.io/assets/80165014/54dda7f6-28bd-4d66-bf0f-d60bf4fded01" alt="image" style="zoom:33%;" /> 
 
