--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -45,7 +45,8 @@ typora-root-url: ../../..
   - 불가능하다면, 혹시 적절한 **자료구조**는??
   - 또는 완.탐 생각할 필요없이 **"단순구현"** 인지??
   - 복잡도 너무큰데 해결안되면 **"DP(for, memoi)"** 고려 -> **"[DP 여러가지 유형](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#dp-%EB%8B%A4%EC%96%91%ED%95%9C-%EC%9C%A0%ED%98%95)"**
-  - **최단거리** 같으면 **"BFS와 다익스트라"** 고려 (본인은 일단 BFS)
+  - **최단거리** 같으면 **"BFS와 다익스트라, 플로이드"** 고려 (각각 상황에 맞게 사용하게 됨)
+    - [최단 경로 트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%B5%9C%EB%8B%A8-%EA%B2%BD%EB%A1%9C-%ED%8A%B8%EB%A6%AC), [보는김에 이것도 확인 -> 최소 신장 트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%B5%9C%EC%86%8C-%EC%8B%A0%EC%9E%A5-%ED%8A%B8%EB%A6%ACmst)
   - 완.탐, 순.조.부, 최단경로 . . . -> 다양한 예시 참고
     - [BFS, DFS -> 최단거리는 꼭 "BFS"!!](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#bfs-dfs---%EC%B5%9C%EB%8B%A8%EA%B1%B0%EB%A6%AC%EB%8A%94-%EA%BC%AD-bfs)
     - [백트래킹(Backtracking) -> DFS(재귀) 사용중](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EB%B0%B1%ED%8A%B8%EB%9E%98%ED%82%B9backtracking---dfs%EC%9E%AC%EA%B7%80-%EC%82%AC%EC%9A%A9%EC%A4%91)
@@ -87,17 +88,19 @@ typora-root-url: ../../..
   - **최단경로트리 vs 최소신장트리**
     - 비슷한 것 같지만 "서로를 보장하지 않음"   
       -> 최단경로라면 꼭 최소신장이고 이런 관계까지 보장하지는 않는다는 것
-    - **최단경로트리** -> 멀리 돌아가더라도 거리(가중치)가 짧은것
+    - **최단경로트리** -> 멀리 돌아가더라도 **거리(가중치)가 짧은것**
       - [최단 경로 트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%B5%9C%EB%8B%A8-%EA%B2%BD%EB%A1%9C-%ED%8A%B8%EB%A6%AC)
       - **다익스트라(코드기억)** : **하나의 정점**에서 다른 모든 정점으로의 최단경로 -> **우선순위 큐 + 최소거리 배열**
-      - 플로이드 : **모든 정점**에서 다른 모든 정점으로의 최단경로 -> **3중 for문 + 인접행렬**
+      - **플로이드(코드기억)** : **모든 정점**에서 다른 모든 정점으로의 최단경로 -> **3중 for문 + 인접행렬**
       - 벨만포드 : 다익스트라는 양수만, 벨만포드는 음수도 최단경로 사용 가능
         - 근데, 벨만포드까지는 코테 잘 안나올것 같아서 나중에 시간나면 보는걸로..
-    - **최소신장트리** -> 돌아가는것을 고려하지 않고 인접 정점들 중 거리(가중치)가 가장 짧은것  
-      최소신장트리는 모든 정점을 "연결"하는데 의의가 있다.
+    - **최소신장트리** -> 돌아가는것을 고려하지 않고 **인접 정점들 중 거리(가중치)가 가장 짧은것**  
+      최소신장트리는 모든 정점을 **"연결"하는데 의의**가 있다.
       - [최소 신장 트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%B5%9C%EC%86%8C-%EC%8B%A0%EC%9E%A5-%ED%8A%B8%EB%A6%ACmst)
       - **프림(코드기억)** -> 우선순위 큐
-      - 크루스칼 -> Union find
+      - **크루스칼(코드기억)** -> Union find
+- **위상정렬(코드기억)** -> 간단하니 이것도 기억해두자..! -> [위상정렬](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%9C%84%EC%83%81-%EC%A0%95%EB%A0%AC)
+- +참고) 최장 증가 부분 수열(LIS) + LCS(공통) 까지도 참고 -> increasing, common
 
 <br>
 
@@ -158,6 +161,8 @@ typora-root-url: ../../..
     * **여러 시작점(x,y), 끝점(N,M)** 을 줘서 함수를 재사용!
   * **추가2) 2차원 "달팽이"**처럼 빙글빙글 돌때 **"범위체크+visited"**로 간단히 구현 가능하다.
     * **좌표 원복**하고 방향 전환하는 형식이 될 것이다.
+  * **추가3)** 분할정복(똑같은 크기로 분할 때) -> **좌표이동 ( + 크기** 활용 )
+    * `x+=N` 이나 `y+=N` 같이 좌표 이동을 하되 **특정한 크기(N)** 을 사용한 이동
 * EX2) **dx, dy**로 1칸씩 같던 것을 **끝까지 이동(while)**하는것 -> dx, dy를 좌표에 더할수록 해당 방향으로 계속 이동 가능하단 점을 알아두자
   * **추가1) 2048 or 모노미노도미노2** 처럼 **끝까지 이동(while) + 범위 넘으면 원복(--)** 방식 괜찮음
   * 이것을 **"하나의 함수" 로 구성**하여 "각각의 좌표나 행,열"로 **각각 재사용 추천**
@@ -167,7 +172,7 @@ typora-root-url: ../../..
 * EX5) **"빈도수"** 구할때 List[] 도 있지만, **HashMap** 에 담으려 노력해보자 (자료구조 활용)
 
   - `Map<Integer, Integer> map = new HashMap<>(); // <number, count>`
-  - `hm.put("java", hm.getOrDefault("java", 0)+1);` -> put, get 함수 기억
+  - `hm.put("java", hm.getOrDefault("java", 0)+1);` -> **put, get 함수** 기억
 * EX6) 보통 "시뮬레이션"은 복잡도가 높지않아 **배열 상태를 매번 새로 복제** 잘 고려 -> 한번씩 이런 사소한 할당에서 문제가 발생
   * `int[][] backup = new int[10][10];`
   * 이후에 backtracking 에 사용할 수도 있으니 이런 복제도 잘 고려
@@ -212,6 +217,11 @@ typora-root-url: ../../..
       //풀이...
   }
   ```
+  
+- EX11) 2차원 배열에서 동일한 행,열 뿐만아니라 **"대각선" 유무 알아낼 때**
+
+  - `Math.abs(col[rowNo]-col[k]) == rowNo-k` : 열값차이와 행값차이가 같다면 **"대각선"**
+
 
 <br>
 
@@ -625,7 +635,7 @@ BFS는 최단거리에 자주 사용하고, DFS는 그래프나 트리에서 주
 
 * BFS, 0-1BFS 만 소개 -> 나머지는 아래에 따로 정리한 부분에서 찾아볼 것
 
-* BFS 최단거리 구하는 방식 2가지+1가지
+* BFS 최단거리 구하는 다양한 방식들
 
   * **"배열(ex: dist\[][])"**에 거리저장 -> 모든 거리 필요시 좋음
   * **"구조체(큐에 들어갈)"**에 거리저장 -> 각각이 거리를 기억 -> 자주 사용중
@@ -659,7 +669,7 @@ BFS는 최단거리에 자주 사용하고, DFS는 그래프나 트리에서 주
 
         <img src="https://github.com/BH946/bh946.github.io/assets/80165014/ac0522aa-2c11-4c49-bd0d-f45d52b6cfb7" alt="image" style="zoom: 25%;" /> 
 
-    * 따라서 보통 다익스트라(or 벨만포드)를 권장한다. **-> 그러나 BFS 방안도 존재하긴 한다.**
+    * 따라서 보통 다익스트라(or 벨만포드)를 권장한다. **-> 그러나 BFS 방안도 존재하긴 한다.(뇌피셜)**
 
     * **큐에 들어갈 구조체를 활용하라 (1)**
 
@@ -675,12 +685,18 @@ BFS는 최단거리에 자주 사용하고, DFS는 그래프나 트리에서 주
         * 대기했다가 지나갈 수 있는 경우가 있어서 그런 부분은 가중치가 2, 3이 될 수 있다.
         * 따라서 **해당 가중치가 동일할 수 있게끔** 구현한 방식이다.
         * 이를 위해 **"조건에 걸린 좌표는 다시 큐에 삽입"** 을 했다.
-
+      * 예시 한가지 더있는데 백준.벽 부수고 이동하기_2206 이 있다.
+        * 이 문제는 NXM 좌표의 칸수를 거리로 보아서 동일한 가중치로 볼 수 있지만,
+        * 벽을 1번까지 통과할 수 있어서 벽O, 벽X 의 가중치가 다를 수 있다.
+          * 물론 실제로 1칸은 거리1로 가중치는 여전히 동일하지만, 
+          * 벽을 통과했을때 경로와 벽을 통과하지 않았을때 경로가 좌표가 동일한데 거리(가중치)가 다를 수 있다는 의미이다.
+        * **무엇이든 처음 방문이 최단경로(BFS특성)**니까 **visited를 벽O,벽X 2개 사용**해서 해결했다.
       * 아래에 코드 정리한게 있는데 그부분을 확인!!
         * 제목 : **너비가 아닌 "레벨(높이)" 구하는 BFS**
-
+        * 제목 : **벽 부수고 이동하기 - visited 2개 + 트리레벨 사용**
+    
     * **0과 1로 이루어진 가중치라면 0-1BFS를 사용하라 (3)**
-
+    
       * 가중치가 0과 1로 이루어진 특수 환경에서 사용
       * deque 사용
       * 이건 따로... 공부합시다...
@@ -985,6 +1001,66 @@ public static void bfs(int cx, int cy, int N) {
 
 <br>
 
+**벽 부수고 이동하기 - visited 2개 + 트리레벨 사용**
+
+```java
+public static void bfs() {
+    Queue<Pair> qu = new ArrayDeque<>();
+    qu.offer(new Pair(0,0,0)); // {x, y, wall}
+    visitedNoWall[0][0] = true;
+    int level = 1; // (0,0) 부터시작
+    if(N==1&&M==1) level=0; // 아래에서 어차피 ++하기 때문에 예외처리
+    while(!qu.isEmpty()) {
+        int size = qu.size();
+        level++;
+        for(int s=0; s<size; s++){
+            Pair p=qu.poll();
+            for(int i=0; i<4; i++){
+                int nx = p.x + dx[i];
+                int ny = p.y + dy[i];
+                if(nx<0||ny<0||nx>=N||ny>=M) continue;
+                if(p.wall==0) { // 아직 벽 안부순경우
+                    if(inArr[nx][ny] == 0) { // 0은 빈벽
+                        if(visitedNoWall[nx][ny]) continue; // 벽 안부순 visited를 체크
+                        qu.offer(new Pair(nx, ny, 0)); // 큐 삽입시점
+                        visitedNoWall[nx][ny]=true;
+                    }else { // 1은 벽
+                        if(visitedYesWall[nx][ny]) continue; // 벽 부순 visited를 체크
+                        qu.offer(new Pair(nx, ny, 1)); // 큐 삽입시점
+                        visitedYesWall[nx][ny]=true;
+                    }
+                }else { // 이미 벽 부순경우
+                    if(inArr[nx][ny] == 0) {
+                        if(visitedYesWall[nx][ny]) continue;
+                        qu.offer(new Pair(nx, ny, 1)); // 큐 삽입시점
+                        visitedYesWall[nx][ny]=true;
+                    }else {
+                        continue; // 이미 벽도 부쉈고(wall=1), 맵에 벽을 만난경우(inArr[nx][ny]=1)
+                    }
+                }
+            }
+        }
+        // 기록 -> 종료시점
+        if(visitedNoWall[N-1][M-1]) {
+            result1 = level; break;
+        }
+        if(visitedYesWall[N-1][M-1]) {
+            result2 = level; break;
+        }
+    }
+
+    //최종 출력
+    if(visitedNoWall[N-1][M-1] || visitedYesWall[N-1][M-1]){
+        System.out.println(Math.min(result1,result2));
+    }else{
+        System.out.println(-1);
+    }
+
+}
+```
+
+<br>
+
 **DFS의 visited 로직이 어디 있느냐에 따라 약간 구조가 다르다. -> 2가지 모습 아래 제시**
 
 ```java
@@ -1095,13 +1171,93 @@ public static void main(String[] args) throws IOException {
 }
 ```
 
+<br>
+
+**ex) 백준 Z -> while, 재귀 둘다 (재귀와 for문은 서로 구현 가능한 관계라는것을 기억)**
+
+- 문제 특성상 N은 2<sup>N</sup> 에 사용됩니다.
+- 그리고 "분할정복" 관점입니다. -> 2<sup>N</sup> x 2<sup>N</sup> -> 2<sup>N-1</sup> x 2<sup>N-1</sup> 로 정확히 4개 만들어서 4등분하는 문제!
+  - 똑같은 크기로써 분할정복이 가능한 문제 -> while, 재귀 둘다 구현 제시
+  - 분할할 때 **"좌표이동 + N(크기)"**
+
+```java
+//while(for문)
+BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+StringTokenizer stk = new StringTokenizer(br.readLine(), " ");
+N = Integer.parseInt(stk.nextToken());
+r = Integer.parseInt(stk.nextToken());
+c = Integer.parseInt(stk.nextToken());
+
+// N계산
+N = (int) Math.pow(2, N); // 2^N
+
+// 최초 탐색 시작점
+int y=0;
+int x=0;
+
+while(true) {
+    if(N==1) break; // N -> N/2 -> N/2 ... 2x2(마지막) 까지는 진행
+
+    N /= 2; // N>>1 
+
+    // 4가지 영역 중 r, c 가 어디에 있는지에 따라 미리 계산할 수 있는 부분 이득을 취한다.
+    if( r < y+N && c < x+N ) { // top-left <= 이득 X, 이 부분을 다시 더 나눠야 한다.
+        ;
+    }else if( r < y + N && c >= x + N) { // top-right <= 왼쪽 미리 계산 이득, 시작점 오른쪽 이동
+        ans+=N*N*1;
+        x+=N; // 좌표이동
+    }else if( r >= y + N && c < x + N) { // bottom-left <= 위쪽 2개 미리 계산 이득, 시작점 밑으로 이동
+        ans+=N*N*2;
+        y+=N; // 좌표이동
+    }else { // bottom-right <= 위쪽 2개 오른쪽 1개 3개 미리 계산 이득, 시작점 오른쪽 밑으로 이동
+        ans+=N*N*3;
+        x+=N; // 좌표이동
+        y+=N;
+    }
+}
+
+System.out.println(ans);
+}
+```
+
+```java
+//재귀(recursion)
+static void z(int y, int x) {
+    // 기저조건
+    if (N==1) return;
+
+    N /= 2; // N>>1 
+
+    // 4가지 영역 중 r, c 가 어디에 있는지에 따라 미리 계산할 수 있는 부분 이득을 취한다.
+    if( r < y+N && c < x+N ) { // top-left <= 이득 X, 이 부분을 다시 더 나눠야 한다.
+        z(y,x);
+    }else if( r < y + N && c >= x + N) { // top-right <= 왼쪽 미리 계산 이득, 시작점 오른쪽 이동
+        ans+=N*N*1; // 부분이득
+        z(y,x+N);
+    }else if( r >= y + N && c < x + N) { // bottom-left <= 위쪽 2개 미리 계산 이득, 시작점 밑으로 이동
+        ans+=N*N*2;
+        z(y+N,x);
+    }else { // bottom-right <= 위쪽 2개 오른쪽 1개 3개 미리 계산 이득, 시작점 오른쪽 밑으로 이동
+        ans+=N*N*3;
+        z(y+N,x+N);
+    }
+
+}
+```
+
 <br><br>
 
 ## 백트래킹(Backtracking) -> DFS(재귀) 사용중
 
-`상태 공간트리` 를 그려가면서 문제를 이해하고, 재귀 형태로 풀어나가자.
+"백트래킹" 은 다음과 같은 절차로 진행된다.
 
-여기서 `백트래킹`은 각 마디가 유망하지 않으면 그 마디의 부모 마디로 돌아가서 다시 검색을 계속하는 방식이다.
+1. **상태 공간 트리**의 깊이 우선 검색을 실시한다.
+2. 각 노드가 **유망한지**를 점검한다.
+3. 만일 그 노드가 유망하지 않으면, 그 노드의 부모 노드로 돌아가서 다른 노드로의 검색을 계속한다.
+
+<br>
+
+`상태 공간트리` 를 그려가면서 문제를 이해하고, 재귀 형태로 풀어나가자.
 
 - **백트래킹**은 재귀에서 자주 볼 수 있으며 본인은 보통 `DFS(재귀방식)+visited[]`로 자주 구현한다.
   - 사실 "순열"을 구할 때 사용한 방식도 백트래킹으로 볼 수 있고, visited 사용해서 false로 되돌아간다면 모두 백트래킹의 개념이라고 이해하면 된다.
@@ -1110,8 +1266,59 @@ public static void main(String[] args) throws IOException {
   - 왜냐하면 위 코드의 의미는 "visited=true"재귀와 "visited=false"재귀로 볼 수 있기때문에 사실상 앞에서 언급한 방식과 "동일한" 백트래킹 방식으로 해석할 수 있다. -> **"부분집합 의미"**
   - 참고 : `백트래킹` 을 DFS+재귀로 자주 사용하지만, `분기한정법` 은 여러 검색 방법(DFS 말고도...!)들을 지원하는 차이가 있다.
 
+<br>
 
-**<br>**
+**유명한 N-Queen 의 예시** -> 주석 위주로 확인
+
+```java
+static int N;
+static int[] col;
+
+public static void main(String[] args) {
+    Scanner in = new Scanner(System.in);
+    N = in.nextInt();
+    col = new int[N + 1]; // 0번 행을 제외하고 작업하기 위해 1을 더한다.각 행에 하나씩만 배치할 수 있기 때문에 1차원, col[i]번째방에 여왕을 배치할 열값을
+    // 저장한다.
+
+    setQueens(1); // 1행부터 시도
+    System.out.println(answer);
+    in.close();
+}
+
+// 유도파트 : 현재 행의 첫열부터 무조건 퀸을 놓고 그 위치가 가능한지 체크하고 가능하다면 다음 행으로 퀸을 놓으러 재귀호출한다.
+// 가능하지 않다면 다음 열로 시도 한다.
+// 기본파트 : 마지막행까지 다 놓았다면 경우의 수 증가후 리턴
+public static void setQueens(int rowNo) {
+
+    if (rowNo > N) { // 시도하려는 rowNo행번호가 N보다 크면 말판끝까지 다 놓은 경우
+        answer++;
+        return;
+    }
+    for (int j = 1; j <= N; j++) { // 해당 행의 1열부터 n열까지 퀸 놓는 시도
+        col[rowNo] = j;
+        if (checking(rowNo)) { // rowNo행의 j열의 상황으로 가능한지 체크하여 가능하다면 다음행 시도
+            setQueens(rowNo + 1); // rowNo+1번째 행 시도
+        }
+    }
+}
+
+// rowNo행에 퀸을 놓을수 있는지 1행부터 기존 rowNo-1행까지 rowNo행와 비교하며 체크
+public static boolean checking(int rowNo) {
+    for (int k = 1; k < rowNo; k++) {
+        // 같은 행에 배치할수 없으므로 행은 비교할 필요 없고 열값에 대해서만 비교하면 됨
+        // col[rowNo]:현재 퀸의 위치 , col[k] :이전 퀸들의 위치(k: 1~(rowNo-1))
+        if (col[rowNo] == col[k] || Math.abs(col[rowNo] - col[k]) == rowNo - k) {// col[rowNo] == col[k] 열이 같은지 체크
+            // (한행에 하나씩 구하기 때문에 행체크 불필요)
+            return false; // Math.abs(col[rowNo]-col[k]) == rowNo-k 대각선 체크 (열값차이와 행값차이가 같다면 대각선)
+        }
+    }
+    return true;
+}
+```
+
+
+
+<br>
 
 **N과 M(1) - 대표적인 템플릿 : [BOJ15649](https://www.acmicpc.net/problem/15649)**
 
@@ -1427,7 +1634,7 @@ static void dfs(int depth) {
 
 ## Branch-and-Bound(분기한정법)
 
-**이건 이런게 있다란 개념만 이해해두자. [분기한정법-개념](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-Branch-and-Bound(%EB%B6%84%EA%B8%B0%ED%95%9C%EC%A0%95%EB%B2%95)/)**
+**개념 이해해두자. 실제로 백트래킹과 DFS 조합으로 많이 사용했다. [분기한정법-개념](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-Branch-and-Bound(%EB%B6%84%EA%B8%B0%ED%95%9C%EC%A0%95%EB%B2%95)/)**
 
 * **분기한정법 : Backtracking +** **다른 탐색들(DFS,BFS,우선순위큐 등)**
 
@@ -1437,13 +1644,13 @@ static void dfs(int depth) {
 
 * **최적화 문제의 SST 비교**
 
-  * 최적화 문제의 SST 비교 최소화 문제(예: TSP)
+  * 최적화 문제의 SST 비교 최소화 문제(예: TSP(=외판원 문제))
     * 트리 깊어질수록 BOUND값이 절대 작아질 수 없음(Low Bound를 구함)
-
-
-  * 최적화 문제의 SST 비교 최대화 문제(예: 0-1냅색)
-      * 트리 깊어질수록 BOUND값이 절대 커질 수 없음(Upper Bound를 구함)
-
+  
+  
+    * 최적화 문제의 SST 비교 최대화 문제(예: 0-1냅색)
+        * 트리 깊어질수록 BOUND값이 절대 커질 수 없음(Upper Bound를 구함)
+  
 
 <br>
 
@@ -2732,63 +2939,58 @@ public static void main(String[] args) throws IOException {
 
 <br><br>
 
-## 위상 정렬
+## 위상정렬
 
-**위상 정렬(Topological Sort) : 방향 그래프에서 간선으로 주어진 정점 간 선후관계를 위배하지 않도록 나열하는 정렬**
+**위상정렬(Topological Sort) : 방향 그래프에서 간선으로 주어진 정점 간 선후관계를 위배하지 않도록 나열하는 정렬**
 
 **BFS(큐)로도 풀이가 가능하고 DFS로도 풀이가 가능한데 둘다 보여주겠다.**
 
 * 단순히 부모 자식관계를 위배하지만 않으면 되므로 생각보다 간단한 정렬이다.
 * indegree가 0인게 제일 부모이며 최외각에 존재하는건 자명하다.
 
-![image-20230506001732475](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506001732475.png)
+![image-20230506001732475](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506001732475.png) 
 
 ```java
 // BOJ 2252
+public static List<Integer>[] inArr = new ArrayList[32005];
+public static int[] outArr = new int[32005];
+public static int[] indegree = new int[32005];
 
-public static int N, M;
-public static List<Integer>[] inArr; // input (graph)
-public static List<Integer> outArr = new ArrayList<>(); // output
-public static int[] deg = new int[32005]; // 0 init
-
-public static void main(String[] args) throws IOException {
-    // input
+public static void main(String[] args) throws Exception {
+    StringBuilder sb = new StringBuilder();
     BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
     StringTokenizer stk = new StringTokenizer(br.readLine(), " ");
-    N = Integer.parseInt(stk.nextToken());
-    M = Integer.parseInt(stk.nextToken());
-    inArr = new ArrayList[N+5];
-    for(int i = 1 ; i<=N;i++) inArr[i] = new ArrayList<>(); // init
-    for(int i = 0 ;i<M;i++){
+    int N = Integer.parseInt(stk.nextToken());
+    int M = Integer.parseInt(stk.nextToken());
+    for(int i=0; i<=N; i++) inArr[i] = new ArrayList<>();
+    for(int i=0; i<M; i++) {
         stk = new StringTokenizer(br.readLine(), " ");
-        int a = Integer.parseInt(stk.nextToken());
-        int b = Integer.parseInt(stk.nextToken());
-        inArr[a].add(b); // graph (방향 그래프)
-        deg[b] += 1; // indegree
+        int n1 = Integer.parseInt(stk.nextToken());
+        int n2 = Integer.parseInt(stk.nextToken());
+        inArr[n1].add(n2); // graph (방향 그래프)
+        indegree[n2]++;
     }
-
-    // run
-    Queue<Integer> qu = new LinkedList<>();
-    for(int i = 1; i<=N; i++)
-        if(deg[i]==0) qu.add(i); // indegree 0 이 젤 최외각
+    //run
+    Queue<Integer> qu = new ArrayDeque<>();
+    for(int i=1; i<=N; i++) {
+        if(indegree[i]==0) qu.offer(i);
+    }
+    int idx = 0;
     while(!qu.isEmpty()) {
-        int cur = qu.peek();
-        qu.remove();
-        outArr.add(cur);
-        for(int nxt : inArr[cur]) {
-            deg[nxt]--;
-            if(deg[nxt] == 0) qu.add(nxt);
+        int node = qu.poll();
+        outArr[idx++] = node;
+        for(int nxt : inArr[node]) {
+            indegree[nxt]--;
+            if(indegree[nxt]==0) qu.offer(nxt); // indegree 가 0이면 큐 삽입
         }
     }
-
-    // output
-    StringBuilder sb = new StringBuilder();
-    for(int num : outArr) sb.append(num).append(' ');
+    //output
+    for(int i=0; i<N; i++) {
+        sb.append(outArr[i]).append(" ");
+    }
     System.out.println(sb);
-
-    if(outArr.size() != N)
-        System.out.println("cycle exists");
 }
+
 ```
 
 <br>
@@ -2915,7 +3117,7 @@ public static void redfs(int depth, int SCCNum) {
 
 -> 예전에 정리한 개념글 위에 링크 확인
 
-![image-20230506012547858](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506012547858.png)
+![image-20230506012547858](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506012547858.png) 
 
 <br>
 
@@ -2927,6 +3129,12 @@ public static void redfs(int depth, int SCCNum) {
 MST - kruskal
 1. 비내림차순 정렬(가중치 기준) => 제일 작은 가중치부터 선택하려고 하는것
 2. Union Find(=합집합 찾기) 이용 : 같은 그래프에 속하는지를 판별하기 위함
+
+흐름 : find(root) -> equal(p,q) -> merge(q->p)
+- initial(n)은 전체를 자기자신을 루트로 가지게 9개의 트리가 독립적으로 만들어진 상태
+- find(i)는 자신이 속한 트리의 루트가 누구인지 찾음
+- equal(p,q)는 동일한지 확인
+- merge(p,q)는 p집합, q집합을 합병(q의 root가 p의 root를 가리키게 바꾸는것)
 */
 public static int[] p = new int[10005]; // 부모기록 배열(-1 init)
 static int find(int x) {
@@ -3002,6 +3210,68 @@ static class ObjectSort implements Comparator<Edge> {
 **프림 알고리즘은 우선순위 큐를 이용해서 구현을 하는데, 구현이 좀 복잡하다.**
 
 ![image](https://github.com/BH946/bh946.github.io/assets/80165014/19663aca-66ae-4c98-9499-c93e6ebd47ee) 
+
+<br>
+
+**프림**
+
+```java
+/**
+ * 프림 핵심 -> chk, pq, cnt
+ */
+public static List<Pair>[] inArr = new ArrayList[10005];
+public static boolean[] chk = new boolean[10005]; // MST CHECK
+
+public static void main(String[] args) throws Exception {
+
+    StringBuilder sb = new StringBuilder();
+    BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+    StringTokenizer stk = new StringTokenizer(br.readLine(), " ");
+    int N = Integer.parseInt(stk.nextToken());
+    int M = Integer.parseInt(stk.nextToken());
+    for(int i=0; i<=N; i++) inArr[i] = new ArrayList<>();
+    for(int i=0; i<M; i++) {
+        stk = new StringTokenizer(br.readLine(), " ");
+        int n1 = Integer.parseInt(stk.nextToken());
+        int n2 = Integer.parseInt(stk.nextToken());
+        int c = Integer.parseInt(stk.nextToken());
+        inArr[n1].add(new Pair(n1,n2,c));
+        inArr[n2].add(new Pair(n2,n1,c)); // 무방향
+    }
+    //run
+    chk[1] = true; // 1번 정점부터 시작하겠음
+    PriorityQueue<Pair> pq = new PriorityQueue<>();
+    for(Pair nxt : inArr[1]) {
+        pq.offer(nxt);
+    }
+    int cnt=0; int result=0; // 현재선택된 간선 수 와 총비용
+    while(cnt < N-1) {
+        Pair cur = pq.poll();
+        if(chk[cur.n2]) continue;
+        chk[cur.n2] = true; // 새로운 정점을 MST에 추가
+        cnt++; result+=cur.c;
+        for(Pair nxt : inArr[cur.n2]) {
+            if(chk[nxt.n2]) continue;
+            pq.offer(nxt); // 큐 삽입 시점
+        }
+    }
+    System.out.println(result);
+}
+
+static class Pair implements Comparable<Pair>{
+    int n1; int n2; int c;
+    public Pair(int n1, int n2, int c) {
+        this.n1=n1;this.n2=n2;this.c=c;
+    }
+
+    @Override
+    public int compareTo(Pair o) {
+        return this.c-o.c; // 최소 가중치 간선부터.. 오름차순
+    }
+}
+```
+
+
 
 <br><br>
 
